solve extra margin problem

--- a/PROJECT_HTML/Project-04/media.css
+++ b/PROJECT_HTML/Project-04/media.css
@@ -53,7 +53,7 @@
         margin-top: 10px;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: space-around;
         font-size: 8px;
     }
 
@@ -67,9 +67,11 @@
 
     /* left - section - 01 */
     .left-main-section-01 {
-        height: 100%;
+        height: 90%;
+        margin-top: -290px;
         width: 98%;
         /* border: solid 1px blue; */
+        /* font-size: .5em; */
         display: flex;
         align-items: center;
         justify-content: center;
@@ -105,7 +107,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        row-gap: 5%;
+        row-gap: 18%;
         width: 90%;
     }
 
@@ -216,8 +218,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        color: #EC5B53;
+        color: rgb(41, 41, 112);
         cursor: pointer;
+    }
+
+    .section-03-second-div .box div:first-child:hover{
+        color: #EC5B53;
     }
 
 
@@ -244,7 +250,7 @@
 
      /* ==================footer===================== */
      .footer-first-div{
-        height: 40%;
+        height: 60%;
         /* border: solid 2px red; */
         display: flex;
         flex-direction: column;
@@ -294,15 +300,18 @@
 
     /* left - section - 01 */
     .left-main-section-01 {
-        height: 100%;
+        margin-top: -170px;
+        height: 65%;
         width: 98%;
         /* border: solid 1px blue; */
-        display: flex;
+        /* display: flex !important; */
         align-items: center;
         justify-content: center;
+        /* row-gap: 30px !important; */
+        
     }
-
-
+    
+    
     /* right - section - 01 */
     .right-image-section-01 {
         height: 100%;
@@ -332,7 +341,8 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        row-gap: 5%;
+        row-gap: 30px;
+        /* row-gap: 5%; */
         width: 90%;
     }
 
@@ -368,6 +378,15 @@
         height: 60%;
         /* border: solid 2px blue !important; */
         display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+    }
+
+
+    .section-02-second-div .section-02-left-section .section-02-second-left , .section-02-second-div .section-02-left-section .section-02-second-right{
+        width: 45%;
+        /* border: solid red 2px; */
     }
 
     .section-02-second-div .section-02-right-section {
@@ -382,7 +401,7 @@
 
     .section-02-right-section .main-right-section-02 img {
         height: 300px;
-        width: 410px;
+        width: 425px;
         border-radius: 5px;
     }
 
@@ -428,8 +447,12 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        color: #EC5B53;
+        color: #0e1b4a;
         cursor: pointer;
+    }
+
+    .section-03-second-div .box div:first-child:hover{
+        color: #EC5B53;
     }
 
     /* =====================section - 04======================= */
@@ -458,7 +481,7 @@
 
     /* ==================footer===================== */
     .footer-first-div{
-        height: 40%;
+        height: 50%;
         /* border: solid 2px red; */
         display: flex;
         flex-direction: column;
